Moved connection to nav bar.

--- a/src/app/containers/Header/Connection/index.styl
+++ b/src/app/containers/Header/Connection/index.styl
@@ -1,38 +1,10 @@
-:global {
-    #nav-dropdown-user,
-    #nav-dropdown-menu {
-        padding: 14px 8px;
-
-        .fa {
-            font-size: 20px;
-        }
-    }
-}
-
-.navbar-brand {
-    img {
-        opacity: 0.8;
-    }
-    img:hover {
-        opacity: 1;
-    }
-}
-
-.btn-icon {
-    color:#444;
-    &:hover,
-    &:focus {
-        color: #222;
-    }
-}
-
-.quick-access-toolbar {
+.connection {
     margin: 10px 0 10px 15px;
 
     @media (min-width: 768px) {
         float: right;
     }
-
+    
     :global {
         .btn-group {
             float: left;
