--- a/src/app/containers/Settings/index.styl
+++ b/src/app/containers/Settings/index.styl
@@ -2,6 +2,11 @@
     padding: 0 15px 10px 15px;
 }
 
+.dialog {
+    width: 95%;
+    height: 95%;
+}
+
 .container {
     display: table;
     width: 100%;
