Implemented Manual Tool Change

--- a/src/app/containers/Header/index.styl
+++ b/src/app/containers/Header/index.styl
@@ -27,7 +27,7 @@
 }
 
 .quick-access-toolbar {
-    margin: 10px 0 10px 15px;
+    margin: 10px 5px 10px 5px;
 
     @media (min-width: 768px) {
         float: right;
@@ -36,7 +36,8 @@
     :global {
         .btn-group {
             float: left;
-            margin-right: 10px;
+            margin-left: 5px;
+            margin-right: 5px;
         }
         .btn {
             height: 50px;
@@ -45,6 +46,18 @@
 
         .btn .fa {
             font-size: 20px;
+        }
+
+        .btn {
+            color: #eee;
+            background-color: #48a;
+            &:hover {
+                color: #ddd;
+                background-color: #379;
+            }
+            &:focus {
+                color: #eee;
+            }
         }
 
         // Remove the outline on buttons
