--- a/src/app/containers/Header/Connection/index.styl
+++ b/src/app/containers/Header/Connection/index.styl
@@ -1,5 +1,5 @@
 .connection {
-    margin: 10px 0 10px 15px;
+    margin: 10px 5px 10px 5px;
 
     @media (min-width: 768px) {
         float: right;
@@ -8,7 +8,6 @@
     :global {
         .btn-group {
             float: left;
-            margin-right: 10px;
         }
         .btn {
             height: 50px;
