--- a/src/app/styles/vendor.styl
+++ b/src/app/styles/vendor.styl
@@ -20,7 +20,7 @@
 @import url("~react-facebook-loading/dist/react-facebook-loading.css");
 
 // font-awesome
-@import "font-awesome";
+@import url("~@fortawesome/fontawesome-free/css/all.css");
 
 // perfect-scrollbar
 @import "perfect-scrollbar";
