--- a/src/app/containers/Workspace/index.styl
+++ b/src/app/containers/Workspace/index.styl
@@ -57,10 +57,10 @@
     .secondary-container {
         vertical-align: top;
         background-color: #f6f7f8;
-        width: 360px;
-        max-width: 360px;
-        min-width: 360px;
-        padding: 0 10px;
+        width: 400px;
+        max-width: 400px;
+        min-width: 400px;
+        padding: 10px 10px;
 
         &.hidden {
             display: none;
